--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-	"name": "dqanda",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/kit": "^1.0.0-next.118",
-		"autoprefixer": "^10.2.6",
-		"bs58": "^4.0.1",
-		"buffer": "^6.0.3",
-		"cssnano": "^5.0.6",
-		"ethers": "^5.4.0",
-		"postcss": "^8.3.5",
-		"postcss-load-config": "^3.1.0",
-		"svelte": "^3.34.0",
-		"svelte-check": "^2.0.0",
-		"svelte-preprocess": "^4.7.3",
-		"tailwindcss": "^2.2.2",
-		"tslib": "^2.0.0",
-		"typescript": "^4.3.4"
-	},
-	"type": "module"
+  "name": "dqanda",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
+  },
+  "devDependencies": {
+    "@sveltejs/kit": "^1.0.0-next.118",
+    "@types/btoa": "^1.2.3",
+    "autoprefixer": "^10.2.6",
+    "bs58": "^4.0.1",
+    "btoa": "^1.2.1",
+    "buffer": "^6.0.3",
+    "cssnano": "^5.0.6",
+    "ethers": "^5.4.0",
+    "postcss": "^8.3.5",
+    "postcss-load-config": "^3.1.0",
+    "svelte": "^3.34.0",
+    "svelte-check": "^2.0.0",
+    "svelte-preprocess": "^4.7.3",
+    "tailwindcss": "^2.2.2",
+    "tslib": "^2.0.0",
+    "typescript": "^4.3.4"
+  },
+  "type": "module"
 }
