improved web3 integration

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@metamask/detect-provider": "^1.2.0",
     "@sveltejs/kit": "^1.0.0-next.118",
     "@types/btoa": "^1.2.3",
     "autoprefixer": "^10.2.6",
