--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@metamask/detect-provider": "^1.2.0",
     "@sveltejs/kit": "^1.0.0-next.118",
     "@types/btoa": "^1.2.3",
+    "@types/dompurify": "^2.2.3",
+    "@types/marked": "^2.0.4",
     "autoprefixer": "^10.2.6",
     "bs58": "^4.0.1",
     "btoa": "^1.2.1",
     "buffer": "^6.0.3",
     "cssnano": "^5.0.6",
+    "dompurify": "^2.3.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.4.0",
+    "marked": "^2.1.3",
     "postcss": "^8.3.5",
     "postcss-load-config": "^3.1.0",
     "svelte": "^3.34.0",
