--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@metamask/detect-provider": "^1.2.0",
+    "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "^1.0.0-next.118",
     "@types/btoa": "^1.2.3",
     "@types/dompurify": "^2.2.3",
