--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "svelte-preprocess": "^4.7.3",
     "tailwindcss": "^2.2.2",
     "tslib": "^2.0.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "web3modal": "^1.9.4"
   },
   "type": "module"
 }
